2007-07-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c, lib/oci8/object.rb, lib/oci8/oci8.rb:
	   delete OCI8::NamedType module and OCI8::NamedType::Base class
	   and add OCI8::Object module, OCI8::Object::Base class and 
	   OCI8::NamedType class. In the user view, OCI8::NamedType::Base
	   become OCI8::Object::Base. The reason is that 'named type' is used
	   only by OCI documents, and Other Oracle manuals use Oracle Object.
	* ext/oci8/oci8.c: free all dependent objects in advance to
	   disconnecting a connection. 
	* lib/oci8/metadata.rb: add OCI8::Metadata::Type#type_metadata.
	    fix typos.
	* test/setup_test_object.sql, test/test_object.rb: add a testcase for
	    Oracle Objects.

2007-07-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: fix for external OS authentication.
	    (contributed by Dan Fitch)

2007-06-26  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: add external OS authentication. (suggested by Dan Fitch)
	      conn = OCI8.new('/')
	    or
	      conn = OCI8.new(nil, nil)
	* test/test_connstr.rb: fix a testcase for external OS authentication.

2007-06-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: read a shared library's ELF header to
	    check what cpu is it for. (linux x86, x86_64 and ia64 only)

2007-06-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: copy oraconf.rb of ruby-oci8-1.0 branch.
	* ext/oci8/lob.c, ext/oci8/oci8.h, ext/oci8/stmt.c: fix to bind
	    an OCI8::NCLOB value on Oralce 9i.
	* test/test_oci8.rb: add testcases for binary_double datatype
	    and OCI8::NCLOB.new.

2007-05-20  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb, ext/oci8/object.c: add new files.
	* ext/oci8/bind.c: fix to bind object type.
	* ext/oci8/extconf.rb: use object.c instead of tdo.c.
	* ext/oci8/metadata.c: add OCI8::Metadata::Base#tdo_id.
	* ext/oci8/oci8.h: add new prototypes; oci8_set_ocinumber(),
	    oci8_set_integer() and Init_oci_object(). delete Init_oci_tdo().